# firefox-native-base16

./: .gitignore  Cargo.toml  README.md  firefox_native_base16.json  flake.nix  install.sh  manifest.json
nix/: build.nix  shell.nix
src/: main.rs
