[package]
name = "firefox-native-base16"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A simple native application to dynamically change your browser theme using base16."
repository = "https://github.com/GnRlLeclerc/firefox-native-base16"
readme = "README.md"
keywords = ["firefox", "browser", "theme", "base16", "native", "messaging"]

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.11", features = ["derive"] }
notify = "6.1.1"
regex = "1.10.5"
serde = "1.0.204"
serde_derive = "1.0.204"
serde_json = "1.0.120"
shellexpand = "3.1.0"
toml = "0.8.16"
